add in mlog files and necessary linkage to the build system. (code not used yet)
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/branches/mlog@603 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/configure.ac
+++ b/configure.ac
@@ -178,6 +178,7 @@ AC_CHECK_MEMBERS([struct stat.st_blksize])
 AC_SEARCH_LIBS([gzseek], [z])
 
 AC_PLFS_DEUBG_FLAG_CHECK
+AC_PLFS_MLOG_FLAG_CHECK
 # first see what needs to be built - XXX ugly (update later)
 AC_PKG_PLFS_COMPONENTS
 AS_IF([test "x$plfs_build_fuse" = "x1"], [AC_PKG_PLFS_FUSE])
