fixed 'make dist'
fixed the truncate bug



git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@746 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Makefile.am
+++ b/Makefile.am
@@ -46,16 +46,13 @@ VERSION.LAYOUT \
 VERSION
 
 EXTRA_DIST = \
-plfs.spec \
 BUGS \
 Changelog \
 easyconf.sh \
 README.install \
 README.testing \
 README.POSIX \
-plfsrc.example \
-plfsrc.example2 \
-plfsrc.example.lanl \
+contrib \
 ad-patches
 
 SUBDIRS = \
