--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
-# Copyright (c) 2009-2011, Los Alamos National Security, LLC. All rights
-# reserved.
+# Copyright (c) 2009-2011, Los Alamos National Security, LLC.
+#                          All rights reserved.
 #
 # This software was produced under U.S. Government contract DE-AC52-06NA25396
 # for Los Alamos National Laboratory (LANL), which is operated by Los Alamos
@@ -12,32 +12,32 @@
 # from LANL.
 #
 # Additionally, redistribution and use in source and binary forms, with or
-# without modification, are permitted provided that the following conditions are
-# met:
+# without modification, are permitted provided that the following conditions
+# are met:
 #
-# •    Redistributions of source code must retain the above copyright notice,
-# this list of conditions and the following disclaimer.
+# • Redistributions of source code must retain the above copyright notice, this
+# list of conditions and the following disclaimer.
 #
-# •   Redistributions in binary form must reproduce the above copyright notice,
+# • Redistributions in binary form must reproduce the above copyright notice,
 # this list of conditions and the following disclaimer in the documentation
 # and/or other materials provided with the distribution.
 #
-# •   Neither the name of Los Alamos National Security, LLC, Los Alamos National
+# • Neither the name of Los Alamos National Security, LLC, Los Alamos National
 # Laboratory, LANL, the U.S. Government, nor the names of its contributors may
 # be used to endorse or promote products derived from this software without
 # specific prior written permission.
 #
 # THIS SOFTWARE IS PROVIDED BY LOS ALAMOS NATIONAL SECURITY, LLC AND
-# CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
+# CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT
+# NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
 # PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL LOS ALAMOS NATIONAL
 # SECURITY, LLC OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 # SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
-# BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER
-# IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
-# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-# POSSIBILITY OF SUCH DAMAGE.
+# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 ################################################################################
 # autoconf
@@ -90,23 +90,24 @@ Copyright (c) 2009-2011, Los Alamos National Security, LLC All rights reserved.
 This software was produced under U.S. Government contract DE-AC52-06NA25396 for
 Los Alamos National Laboratory (LANL), which is operated by Los Alamos National
 Security, LLC for the U.S. Department of Energy. The U.S. Government has rights
-to use, reproduce, and distribute this software.  NEITHER THE GOVERNMENT NOR LOS
-ALAMOS NATIONAL SECURITY, LLC MAKES ANY WARRANTY, EXPRESS OR IMPLIED, OR ASSUMES
-ANY LIABILITY FOR THE USE OF THIS SOFTWARE.  If software is modified to produce
-derivative works, such modified software should be clearly marked, so as not to
-confuse it with the version available from LANL.
+to use, reproduce, and distribute this software.  NEITHER THE GOVERNMENT NOR
+LOS ALAMOS NATIONAL SECURITY, LLC MAKES ANY WARRANTY, EXPRESS OR IMPLIED, OR
+ASSUMES ANY LIABILITY FOR THE USE OF THIS SOFTWARE.  If software is modified to
+produce derivative works, such modified software should be clearly marked, so
+as not to confuse it with the version available from LANL.
 
-Additionally, redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are met:
+Additionally, redistribution and use in source and binary forms, with or
+without modification, are permitted provided that the following conditions are
+met:
 
-•   Redistributions of source code must retain the above copyright notice, this
+• Redistributions of source code must retain the above copyright notice, this
 list of conditions and the following disclaimer.
 
-•   Redistributions in binary form must reproduce the above copyright notice,
-this list of conditions and the following disclaimer in the documentation and/or
-other materials provided with the distribution.
+• Redistributions in binary form must reproduce the above copyright notice,
+this list of conditions and the following disclaimer in the documentation
+and/or other materials provided with the distribution.
 
-•   Neither the name of Los Alamos National Security, LLC, Los Alamos National
+• Neither the name of Los Alamos National Security, LLC, Los Alamos National
 Laboratory, LANL, the U.S. Government, nor the names of its contributors may be
 used to endorse or promote products derived from this software without specific
 prior written permission.
@@ -115,9 +116,9 @@ THIS SOFTWARE IS PROVIDED BY LOS ALAMOS NATIONAL SECURITY, LLC AND CONTRIBUTORS
 "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 ARE DISCLAIMED. IN NO EVENT SHALL LOS ALAMOS NATIONAL SECURITY, LLC OR
-CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY,
-OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
+OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
 INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
 CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
 IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY
@@ -181,7 +182,11 @@ AC_PLFS_DEUBG_FLAG_CHECK
 AC_PLFS_MLOG_FLAG_CHECK
 # first see what needs to be built - XXX ugly (update later)
 AC_PKG_PLFS_COMPONENTS
-AS_IF([test "x$plfs_build_fuse" = "x1"], [AC_PKG_PLFS_FUSE])
+AC_PKG_PLFS_FUSE([PLFS_FUSE],
+                 [AC_SUBST([PLFS_FUSE_CFLAGS])
+                 AC_SUBST([PLFS_FUSE_CXXFLAGS])
+                 AC_SUBST([PLFS_FUSE_LDFLAGS])
+                 AC_SUBST([PLFS_FUSE_LIBS])])
 # check for mpi.h first because romio depends on it.  see: config/plfs_romio.m4
 AS_IF([test "x$plfs_build_adio_test" = "x1"],
       [AC_PKG_PLFS_MPI
