install plfs fuse in sbin.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@796 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/fuse/Makefile.am
+++ b/fuse/Makefile.am
@@ -1,4 +1,4 @@
-# Copyright (c) 2009-2010, Los Alamos National Security, LLC. All rights
+# Copyright (c) 2009-2012, Los Alamos National Security, LLC. All rights
 # reserved.
 #
 # This software was produced under U.S. Government contract DE-AC52-06NA25396
@@ -58,10 +58,10 @@ headers = \
 fusexx.h \
 plfs_fuse.h
 
-bin_PROGRAMS =
+sbin_PROGRAMS =
 
 if PLFS_BUILD_FUSE
-bin_PROGRAMS += plfs
+sbin_PROGRAMS += plfs
 
 plfs_SOURCES = \
 $(headers) \
