a patch so that tests/plfsunit.cpp will build using the plfs include files in it's parent directory instead of relying on system install
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@856 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -72,7 +72,7 @@ plfsunit_SOURCES = \
 plfsunit.h plfsunit.cpp unitmain.cpp
 
 plfsunit_CXXFLAGS = \
-	-D_FILE_OFFSET_BITS=64 @CPPUNIT_CFLAGS@
+	-I../src -D_FILE_OFFSET_BITS=64 @CPPUNIT_CFLAGS@
 
 plfsunit_LDFLAGS = \
 	@CPPUNIT_LIBS@ -lplfs -L../src -lpthread
