import baseline version of iostore abstraction
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/branches/iostore@1012 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -75,6 +75,8 @@ FlatFileFS.h \
 FlatFileFD.h \
 mlog_oss.h \
 XAttrs.h  \
+IOStore.h \
+PosixIOStore.h \
 $(include_HEADERS) \
 $(dist_pkginclude_HEADERS)
 
