import baseline version of iostore abstraction
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/branches/iostore@1012 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -73,6 +73,8 @@ LogicalFS.h \
 LogicalFD.h \
 FlatFileFS.h \
 FlatFileFD.h \
+IOStore.h \
+PosixIOStore.h \
 $(include_HEADERS) \
 $(dist_pkginclude_HEADERS)
 
