Added plfsrc.example to the tarball generated by 'make dist'. Also moved init.d scripts to contrib/init.d and made sure all of them are in the tarball generated by 'make dist'.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1096 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -40,6 +40,10 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 EXTRA_DIST = \
+init.d/plfs.init \
+init.d/plfs.init.suse \
+init.d/plfs.sysconfig \
+init.d/README \
 LANL/configuration_files/README \
 LANL/configuration_files/plfs.sysconfig.cerrillos.compute \
 LANL/configuration_files/plfs.sysconfig.cerrillos.fe \
@@ -140,6 +144,9 @@ LANL/configuration_files/plfsrc.yellow.threadpool_size.compute \
 LANL/configuration_files/plfsrc.yellow.threadpool_size.fta \
 LANL/configuration_files/plfsrc.yellowrail \
 LANL/configuration_files/plfsrc.yellowrail.old \
+LANL/RPMs/LANL_RPM_Building.txt \
+LANL/RPMs/plfs-2.1.spec \
+LANL/RPMs/sys_typ.sh \
 syncer/Makefile \
 syncer/README \
 syncer/etc/example.conf \
