Cleaned up documentation and placement of ADIO layer. Everything is now in mpi_adio. These changes correspond to Trac ticket #87. In addition to those changes, the following were also done:
- Put files necessary for generating patches in the tarball release (ad_plfs/Makefile's and make_ad_plfs_patch)
- Added prep patching file for mpich2-1.4.1p1. Documentation was updated to relfect that mpich2 patches can be generated, but only Open MPI has been extensively tested.


git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1097 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/configure.ac
+++ b/configure.ac
@@ -197,13 +197,13 @@ Makefile
 config/Makefile
 src/Makefile
 fuse/Makefile
-ad_plfs/Makefile
 scripts/Makefile
 tests/Makefile
 tools/Makefile
 man/Makefile
 contrib/Makefile
-ad-patches/Makefile
+mpi_adio/Makefile
+mpi_adio/ad_plfs/Makefile
 ])
 
 AC_OUTPUT
