The top-level README was not being included in the tarball generated by 'make dist'. Added README.mlog to the tarball since a tarball release is mlog capable. Changed the order of a couple of items in the README only to satisfy a need to prioritize things. :)
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1101 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,9 +50,10 @@ BUGS \
 Changelog \
 easyconf.sh \
 plfsrc.example \
+README \
+README.POSIX \
 README.install \
-README.testing \
-README.POSIX
+README.mlog
 
 SUBDIRS = \
 config \
