now log buffering works.  this might help performance on cielo since it does IO forwarding.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/branches/log_buffering@1104 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -64,6 +64,7 @@ Metadata.h \
 mlog.h \
 OpenFile.h \
 plfs_private.h \
+PhysicalLogFile.h \
 ThreadPool.h \
 WriteFile.h \
 container_internals.h \
@@ -83,6 +84,7 @@ FileOp.cpp \
 Index.cpp \
 LogMessage.cpp \
 OpenFile.cpp \
+PhysicalLogFile.cpp \
 ThreadPool.cpp \
 WriteFile.cpp \
 mlog.c \
