OK.  There were two problems:
1.  In the append function, I was only updating the pointer into the outbuffer
    but not the pointer into the inbuffer.  This was fine for cases in which
    only one copy was needed but when the append overflowed the outbuffer,
    this was breaking.

2.  Stupid thing wasn't thread-safe.  Took me a while to figure that out.
    Normally it'd be fine.  But sometimes FUSE would take it upon itself
    to sync the file and then there'd be two threads messing with the buffer
    and the buffer pointer.  Added a sweet ScopeMutex.h class to deal with this.

Also, I cleaned up the .plfsdebug and the plfs_check_config.  There were doing
the same thing in two different places so I made them share one piece of code.

Finally, I figured out that __PRETTY_FUNCTION__ is nicer than __FUNCTION__.
We should maybe switch everywhere.



git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/branches/log_buffering@1105 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -65,6 +65,7 @@ mlog.h \
 OpenFile.h \
 plfs_private.h \
 PhysicalLogFile.h \
+ScopeMutex.h \
 ThreadPool.h \
 WriteFile.h \
 container_internals.h \
