add -lpthread if needed.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1139 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/configure.ac
+++ b/configure.ac
@@ -166,6 +166,9 @@ AC_TYPE_UINT64_T
 
 # check for extra stuff that plfs uses
 AX_PTHREAD
+# XXX this really should be in config/ax_pthread.m4, but for now this will do.
+# make sure we add -lpthread if needed...
+AC_CHECK_LIB(pthread, pthread_create)
 AC_FUNC_MALLOC
 AC_FUNC_MMAP
 AC_STRUCT_ST_BLOCKS
