add check for libm.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1143 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/configure.ac
+++ b/configure.ac
@@ -168,7 +168,7 @@ AC_TYPE_UINT64_T
 AX_PTHREAD
 # XXX this really should be in config/ax_pthread.m4, but for now this will do.
 # make sure we add -lpthread if needed...
-AC_CHECK_LIB(pthread, pthread_create)
+AC_CHECK_LIB([pthread], [pthread_create])
 AC_FUNC_MALLOC
 AC_FUNC_MMAP
 AC_STRUCT_ST_BLOCKS
@@ -180,6 +180,7 @@ AC_FUNC_STRTOD
 AC_CHECK_MEMBERS([struct stat.st_blksize])
 
 AC_SEARCH_LIBS([gzseek], [z])
+AC_CHECK_LIB([m], [ceilf])
 
 AC_PLFS_DEUBG_FLAG_CHECK
 AC_PLFS_MLOG_FLAG_CHECK
