added new string stream class for mlog
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1154 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -73,6 +73,7 @@ LogicalFS.h \
 LogicalFD.h \
 FlatFileFS.h \
 FlatFileFD.h \
+mlog_oss.h \
 $(include_HEADERS) \
 $(dist_pkginclude_HEADERS)
 
@@ -91,7 +92,8 @@ ContainerFD.cpp \
 FlatFileFD_FS.cpp \
 plfs_private.cpp \
 container_internals.cpp \
-plfs.cpp
+plfs.cpp \
+mlog_oss.cpp
 
 libplfs_la_SOURCES = \
 $(headers) \
