Split apart Index class to support multiple Index types.  Added two types: the default and UPC.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/branches/upc_io@1173 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -59,6 +59,8 @@ headers = \
 Container.h \
 FileOp.h \
 Index.h \
+IndexDefault.h \
+IndexUpc.h \
 LogMessage.h \
 Metadata.h \
 mlog.h \
@@ -81,6 +83,8 @@ Util.cpp \
 Container.cpp \
 FileOp.cpp \
 Index.cpp \
+IndexDefault.cpp \
+IndexUpc.cpp \
 LogMessage.cpp \
 OpenFile.cpp \
 ThreadPool.cpp \
