Modified comments about num_hostdirs in plfsrc.example to be consistent with each other.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1180 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/plfsrc.example
+++ b/plfsrc.example
@@ -30,7 +30,8 @@
 
 #################
 # num_hostdirs:
-# this should be square root of total number of compute nodes
+# this should be set to a number near the square root of the total number of
+# PE's on the system
 #################
 # 
 # Official rule:
