add -lz to LIBS if needed.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/trunk@1181 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/configure.ac
+++ b/configure.ac
@@ -179,7 +179,7 @@ AC_FUNC_CHOWN
 AC_FUNC_STRTOD
 AC_CHECK_MEMBERS([struct stat.st_blksize])
 
-AC_SEARCH_LIBS([gzseek], [z])
+AC_CHECK_LIB([z], [gzseek])
 AC_CHECK_LIB([m], [ceilf])
 
 AC_PLFS_DEUBG_FLAG_CHECK
