Added extended attributes and a upc wrapper that uses these attributes.
git-svn-id: https://plfs.svn.sourceforge.net/svnroot/plfs/branches/upc_io@1185 979fb63a-54b4-4514-8d67-9ab8ea1b59df

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -74,6 +74,8 @@ LogicalFD.h \
 FlatFileFS.h \
 FlatFileFD.h \
 mlog_oss.h \
+XAttrs.h  \
+upc_map.h \
 $(include_HEADERS) \
 $(dist_pkginclude_HEADERS)
 
@@ -93,7 +95,9 @@ FlatFileFD_FS.cpp \
 plfs_private.cpp \
 container_internals.cpp \
 plfs.cpp \
-mlog_oss.cpp
+mlog_oss.cpp \
+XAttrs.cpp \
+upc_map.cpp
 
 libplfs_la_SOURCES = \
 $(headers) \
