--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -94,6 +94,8 @@ mlog.c \
 ContainerFS.cpp \
 ContainerFD.cpp \
 FlatFileFD_FS.cpp \
+GlibIOStore.cpp \
+PosixIOStore.cpp \
 plfs_private.cpp \
 container_internals.cpp \
 plfs.cpp \
