add all changes based on 2.2.1

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -73,6 +73,8 @@ LogicalFS.h \
 LogicalFD.h \
 FlatFileFS.h \
 FlatFileFD.h \
+idxanalyzer.h \
+patternanalyzer.h \
 $(include_HEADERS) \
 $(dist_pkginclude_HEADERS)
 
@@ -91,6 +93,8 @@ ContainerFD.cpp \
 FlatFileFD_FS.cpp \
 plfs_private.cpp \
 container_internals.cpp \
+idxanalyzer.cpp \
+patternanalyzer.cpp \
 plfs.cpp
 
 libplfs_la_SOURCES = \
