add a missing backslash in Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -97,7 +97,7 @@ plfs_private.cpp \
 container_internals.cpp \
 plfs.cpp \
 mlog_oss.cpp \
-XAttrs.cpp 
+XAttrs.cpp \
 idxanalyzer.cpp \
 patternanalyzer.cpp 
 
