--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,20 @@ Makefile
 /config.h
 /aclocal.m4
 Makefile.in
-/config/
 /config.h.in
 /configure
+config/compile
+config/config.guess
+config/config.sub
+config/depcomp
+config/install-sh
+config/libtool.m4
+config/ltmain.sh
+config/ltoptions.m4
+config/ltsugar.m4
+config/ltversion.m4
+config/lt~obsolete.m4
+config/missing
 *~
 /build*/
 m4
