modified gitignore file for the new build system

--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,43 @@
-autom4te.cache
-/stamp-h1
-Makefile
-/config.status
-/config.log
-/config.h
-/aclocal.m4
-Makefile.in
-/config.h.in
-/configure
-config/compile
-config/config.guess
-config/config.sub
-config/depcomp
-config/install-sh
-config/libtool.m4
-config/ltmain.sh
-config/ltoptions.m4
-config/ltsugar.m4
-config/ltversion.m4
-config/lt~obsolete.m4
-config/missing
+*Makefile
 *~
-/build*/
-m4
-GIT_REVISION
-SVN_REVISION
-libtool
 *.o
 *.la
 *.so*
 *.a
-.deps
-*.tar*
-*.zip
 *.lo
 *.swp
-.libs/
-_libs
+*.tar*
+*.zip
+
+#man pages
 man/man1/*.1
 man/man3/*.3
 man/man5/*.5
 man/man7/*.7
-man/.dir-stamp
-fuse/plfs
-tests/rename
-tests/access
-tools/dcon
-tools/findmesgbuf
-tools/plfs_check_config
-tools/plfs_flatten_index
-tools/plfs_map
-tools/plfs_query
-tools/plfs_recover
-tools/plfs_version
-tools/plfs_ls
+
+#mac stuff
 a.out.dSYM*
+
+#patches
 mpi_adio/patches/mpich2/*.patch
 mpi_adio/patches/openmpi/*.patch
+
+#cmake
+CMakeCache.txt
+CMakeFiles
+cmake_install.cmake
+
+#cmake inside build
+build/dcon
+build/findmesgbuf
+build/install
+build/man/
+build/plfs
+build/plfs_check_config
+build/plfs_flatten_index
+build/plfs_ls
+build/plfs_map
+build/plfs_query
+build/plfs_recover
+build/plfs_version
+build/install_manifest.txt
