--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ AUX_SOURCE_DIRECTORY(${PLFS_SOURCE_DIR}/LogicalFS/FlatFile logicalfs_flatfile)
 AUX_SOURCE_DIRECTORY(${PLFS_SOURCE_DIR}/Index index)
 AUX_SOURCE_DIRECTORY(${PLFS_SOURCE_DIR}/Mlog mlog)
 
-OPTION (BUILD_STATC_LIBS "Build shared libraries." OFF)
+OPTION (BUILD_STATIC_LIBS "Build shared libraries." OFF)
 message ("-- BUILD_STATIC_LIBS ${BUILD_STATIC_LIBS}")
 if (BUILD_STATIC_LIBS)
     set(PLFS_SHARED STATIC)
