temporary fix for the statvfs warning we often see when linking against plfs, would like to get #define HAVE_CONFIG_H working, so far no luck, Also redid is_plfs_path to return 1 if True, 0 otherwise

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,6 +41,8 @@
 
 plfsetcdir = $(sysconfdir)/plfs
 
+include_HEADERS = config.h
+
 dist_plfsetc_DATA = \
 VERSION.LAYOUT \
 VERSION
@@ -66,6 +68,7 @@ tests \
 man \
 contrib \
 mpi_adio
+
 
 ACLOCAL_AMFLAGS = -I config
 
